<resources>
    <string name="app_name">BembosAppOriginal</string>
    <string name="home">home</string>
    <string name="menu">menu</string>
    <string name="beneficios">beneficios</string>
    <string name="favoritos">favoritos</string>
    <string name="delivery">delivery</string>
    <string name="disfruta">disfruta</string>
    <string name="omitir">omitir</string>
    <string name="content_description">content_description</string>
    <string name="desc_background">Imagen de fondo principal</string>
    <string name="Omitir">Omitir</string>
    <string name="disfrutar">Disfruta de tus hamburguesas favoritas desde la comunidad de tu hogar. te las llevamos donde estés</string>
    <string name="Delivery">Delivery</string>
    <string name="Omitirr">Omitir</string>
    <string name="nextbutton">nextbutton</string>
    <string name="Retiro_en_tienda">Retiro_en_tienda</string>
    <string name="Retiro">Ordena por adelantado y recoge tu pedido en la tienda mas cercana cuando este listo</string>
    <string name="Omitire">Omitir</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="olvidastes_passwordd">¿Olvidastes tu contraseña?</string>
    <string name="ingresar">Iniciar Sesión</string>
    <string name="ingresarCorreo">Continúa con Google</string>
    <string name="Registrar">Crear cuenta</string>
    <string name="ingresar_invitado">Ingresar como invitado</string>
    <string name="passwordd">Passwordd *</string>
    <string name="titulo_app">titulo_app</string>
    <string name="crear_cuenta">Crear_cuenta</string>
    <string name="Crear_cuenta">Crear cuenta</string>
    <string name="terminos">Al registrarme acepto los términos y condiciones y el tratamiento de datos personales.</string>
    <string name="Crear_Cuenta">Crear cuenta</string>
    <string name="selectopcion">Selecciona una opción</string>
    <string name="informacion_personal">Información personal</string>
    <string name="celular">Celular *</string>
    <string name="tipo_de_documento">Tipo de Documento *</string>
    <string name="numero_documento">Número de Documento *</string>
    <string name="ingresa_documento">Ingresa documento</string>
    <string name="aceptar_terminos">Aceptar recibir promociones y novedades.</string>
    <string name="aceptar_transferencia">Aceptar la transferencia de datos a empresas asociadas.</string>
    <string name="informaci_personal">Información Personal</string>
    <string name="nombre">Nombre *</string>
    <string name="apellido">Apellido *</string>
    <string name="ej_torres">Ej. Torres</string>
    <string name="tipo_documento">Tipo de documento *</string>
    <string name="Nombre">Nombre *</string>
    <string name="Apellido">Apellido</string>
    <string name="Apellidoo">Apellido *</string>
    <string name="tipdocumento">Tipo de documento</string>
    <string name="ej_camila">Ej.Camila</string>
    <string name="ej_torre">Ej. Torres</string>
    <string name="phone">Celular *</string>
    <string name="phones">--- --- ---</string>
    <string name="cumpleaños">Cumpleaños*</string>
    <string name="phonee">--- --- ---</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="nombre_dominio_com">nombre@dominio.com</string>
    <string name="confirmar_passwordd">Confirmar passwordd</string>
    <string name="confirmar_contrase">Confirmar_contraseña</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="recuperar_contrase">Recuperar contraseña</string>
    <string name="introduccion">Por favor, introduzca su dirección de correo electrónico. Recibirá un enlace para crear una nueva contraseña por correo electrónico.</string>
    <string name="Correo_electronico">Correo electronico *</string>
    <string name="restablecer_contra">Restablecer contraseña</string>
    <string name="codigo_validación">Ingresa código de validación</string>
    <string name="nueva_contra">Nueva contraseña *</string>
    <string name="nuevacontra">......</string>
    <string name="confirmarContra">Confirmar Contraseña</string>
    <string name="ConfirmarContra">Confirmar contraseña *</string>
    <string name="confircontra">......</string>
    <string name="al_menos_8_caracteres">Al menos 8 caracteres</string>
    <string name="incluir_numero">Incluir al menos un número</string>
    <string name="cambiar_contrase">Cambiar contraseña</string>
    <string name="valida">......</string>
    <string name="solicitar_codigo">Esperar 1:44 para poder solicitar un nuevo código</string>
    <string name="caracter3">Utilice al menos un cáracter especial</string>
    <string name="caracter2">Incluir letras mayúsculas y minúsculas</string>
    <string name="correo_usuario">birabernal46@gmail.com</string>
    <string name="restablecida">¡Tu Contraseña Ha Sido Restablecida!</string>
    <string name="aceptar">Aceptar</string>
</resources>