<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.RestablecerContra">


    <View
        android:id="@+id/toolbar"
        android:background="@color/dark_blue"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="-330dp"
        android:text="@string/restablecer_contra"
        android:textColor="@color/white"
        android:fontFamily="@font/oswald_regular"/>

    <ImageView
        android:id="@+id/ivIzquierda"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="9dp"
        android:clickable="true"
        android:contentDescription="@string/nextbutton"
        android:focusable="true"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_left"
        android:layout_marginTop="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/correo_electronico"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/crimson_regular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/correo_usuario"
            android:textColor="@color/black"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:fontFamily="@font/crimson_regular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/codigo_validación"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/crimson_regular" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            app:hintEnabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/se_bg_edt_white"
                android:inputType="number"
                android:maxLength="6"
                android:layout_marginStart="18dp"
                android:textSize="20sp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColorHint="@color/dim_gray"
                android:hint= "@string/valida" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nueva_contra"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/crimson_regular" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/se_bg_edt_white"
                android:inputType="textPassword"
                android:padding="18dp"
                android:maxLength="20"
                android:textColorHint="@color/dim_gray"
                android:hint="@string/nuevacontra" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ConfirmarContra"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/crimson_regular" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassworddConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/se_bg_edt_white"
                android:inputType="textPassword"
                android:padding="16dp"
                android:maxLength="20"
                android:textColorHint="@color/dim_gray"
                android:hint="@string/confircontra" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-60dp"
            android:textSize="15sp"
            android:layout_marginTop="19dp"
            android:text="@string/al_menos_8_caracteres"
            android:textColor="@color/dim_gray"
            android:fontFamily="@font/crimson_regular"
            android:textStyle="normal"/>

        <ImageView
            android:id="@+id/ivx1"
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:padding="20dp"
            android:clickable="true"
            android:contentDescription="@string/nextbutton"
            android:focusable="true"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_x"
            android:layout_marginTop="-36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-10dp"
            android:textSize="15sp"
            android:layout_marginTop="-10dp"
            android:text="@string/caracter2"
            android:textColor="@color/dim_gray"
            android:fontFamily="@font/crimson_regular"
            android:textStyle="normal"/>

        <ImageView
            android:id="@+id/ivx2"
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:padding="20dp"
            android:clickable="true"
            android:contentDescription="@string/nextbutton"
            android:focusable="true"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_x"
            android:layout_marginTop="-36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-18dp"
            android:textSize="15sp"
            android:layout_marginTop="-10dp"
            android:text="@string/caracter3"
            android:textColor="@color/dim_gray"
            android:fontFamily="@font/crimson_regular"
            android:textStyle="normal"/>

        <ImageView
            android:id="@+id/ivx3"
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:padding="20dp"
            android:clickable="true"
            android:contentDescription="@string/nextbutton"
            android:focusable="true"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_x"
            android:layout_marginTop="-36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-40dp"
            android:textSize="15sp"
            android:layout_marginTop="-10dp"
            android:text="@string/incluir_numero"
            android:textColor="@color/dim_gray"
            android:fontFamily="@font/crimson_regular"
            android:textStyle="normal"/>

        <ImageView
            android:id="@+id/ivx4"
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:padding="20dp"
            android:clickable="true"
            android:contentDescription="@string/nextbutton"
            android:focusable="true"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_x"
            android:layout_marginTop="-36dp" />





        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/sh_bg_btn_dark_blue"
            android:fontFamily="@font/oswald_regular"
            android:text="@string/cambiar_contrase"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:paddingStart="10dp"
            android:paddingEnd="19dp" />

        <TextView
            android:id="@+id/tvIngresarHome"
            android:layout_width="350dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/solicitar_codigo"
            android:textColor="@color/dim_gray"
            android:textSize="11sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
