<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ConfirmContra">


    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/oswald_regular"
        android:text="@string/restablecida"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivIzquierda"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:padding="20dp"
        android:clickable="true"
        android:contentDescription="@string/nextbutton"
        android:focusable="true"
        android:background="@drawable/sh_bg_circle_leaf_green"
        android:src="@drawable/ic_confirm"
        android:layout_marginTop="190dp"
        android:layout_marginStart="160dp"/>

    <Button
        android:id="@+id/btnConfirmContra"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:background="@drawable/sh_bg_btn_dark_blue"
        android:fontFamily="@font/oswald_regular"
        android:text="@string/aceptar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:paddingStart="10dp"
        android:paddingEnd="19dp" />

</FrameLayout>