<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginGoogle">


    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dark_blue" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="-270dp"
        android:layout_marginEnd="90dp"
        android:text="@string/informacion_personal"
        android:textColor="@color/black"
        android:fontFamily="@font/oswald_regular"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:paddingBottom="30dp" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:text="@string/celular"
                android:textColor="@color/black"
                android:fontFamily="@font/crimson_regular"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:background="@drawable/se_bg_edt_white"
                    android:inputType="phone"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:textColorHint="@color/dim_gray"
                    android:hint="999 999 999"
                    android:fontFamily="@font/crimson_regular" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvDocTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_documento"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/crimson_regular"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDocType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/dark_blue"
                app:hintEnabled="false"
                app:endIconMode="dropdown_menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/actvDocType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:background="@drawable/se_bg_edt_white"
                    android:fontFamily="@font/crimson_regular"
                    android:hint="@string/selectopcion"
                    android:textSize="16sp"
                    android:padding="16dp"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:text="@string/numero_documento"
                android:textColor="@color/black"
                android:fontFamily="@font/crimson_regular"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:background="@drawable/se_bg_edt_white"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:textColorHint="@color/dim_gray"
                    android:hint="@string/ingresa_documento"
                    android:fontFamily="@font/crimson_regular" />

            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/cbPromotions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:button="@drawable/checkbox_selector"
                android:buttonTint="@color/dark_blue"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:text="@string/aceptar_terminos"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/cbDataTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/checkbox_selector"
                android:buttonTint="@color/dark_blue"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:text="@string/aceptar_transferencia"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@color/dim_gray"
                android:alpha="0.3"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="15sp"
                android:lineSpacingExtra="4dp"
                android:text="@string/terminos"
                android:textColor="@color/bright_blue"
                android:fontFamily="@font/crimson_regular"/>


            <Button
                android:id="@+id/btncuentagoogle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/sh_bg_btn_dark_blue"
                android:text="@string/Crear_Cuenta"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/oswald_regular"/>

        </LinearLayout>


    </ScrollView>


</FrameLayout>