<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.RecuperarContra">

    <View
        android:id="@+id/toolbar"
        android:background="@color/dark_blue"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="-330dp"
        android:text="@string/recuperar_contrase"
        android:textColor="@color/white"
        android:fontFamily="@font/oswald_regular"/>

    <ImageView
        android:id="@+id/ivIzquierda"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="9dp"
        android:clickable="true"
        android:contentDescription="@string/nextbutton"
        android:focusable="true"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_left"
        android:layout_marginTop="10dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="115dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:text="@string/introduccion"
            android:textColor="@color/dim_gray"
            android:fontFamily="@font/crimson_regular"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Correo_electronico"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/crimson_regular" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@drawable/se_bg_edt_white"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="16sp"
                android:textColorHint="@color/dim_gray"
                android:hint="nombre@dominio.com"
                android:fontFamily="@font/crimson_regular" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/sh_bg_btn_dark_blue"
            android:fontFamily="@font/oswald_regular"
            android:text="@string/ingresar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:paddingStart="10dp"
            android:paddingEnd="19dp" />

    </LinearLayout>
</FrameLayout>